<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/table_date" />

        <TextView
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/table_duration">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/table_distance">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/table_rating">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_weight="1"
            android:text="@string/table_note">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_column="5"
            android:layout_weight="1"
            android:text="@string/table_weather">
        </TextView>
    </TableRow>
</LinearLayout>