<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracker">

    <fragment
        android:id="@+id/nav_tracker"
        android:name="com.example.psybc5_mdp_cw2.ui.tracker.TrackerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tracker" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.psybc5_mdp_cw2.ui.data.DataFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.psybc5_mdp_cw2.ui.settings.SettingsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />
</navigation>